--- a/Home.html
+++ b/Home.html
@@ -15,13 +15,13 @@
       <li>
           <a href="#">Quizzes</a>
           <ul class="dropdown">
-              <li><a href="#" onclick="passlevel(1)">Factorizing Level 1</a></li>
-              <li><a href="#" onclick="passlevel(2)">Factorizing Level 2</a></li>
-              <li><a href="#" onclick="passlevel(3)">Factorizing Level 3</a></li>
-              <li><a href="#" onclick="passlevel(4)">Factorizing Level 4</a></li>
-              <li><a href="#" onclick="passlevel(5)">Factorizing Level 5</a></li>
-              <li><a href="#" onclick="Page_underdevelop()">Simal. Equations solving Level 1</a></li>
-              <li><a href="#" onclick="Page_underdevelop()">Simal. Equations solving Level 2</a></li>
+              <li><a href="#" onclick="passlevel_q1(1)">Factorizing Level 1</a></li>
+              <li><a href="#" onclick="passlevel_q1(2)">Factorizing Level 2</a></li>
+              <li><a href="#" onclick="passlevel_q1(3)">Factorizing Level 3</a></li>
+              <li><a href="#" onclick="passlevel_q1(4)">Factorizing Level 4</a></li>
+              <li><a href="#" onclick="passlevel_q1(5)">Factorizing Level 5</a></li>
+              <li><a href="#" onclick="passlevel_q2(1)">Quadratic. Equations solving Level 1</a></li>
+              <li><a href="#" onclick="passlevel_q2(2)">Quadratic. Equations solving Level 2</a></li>
               <li><a href="#"onclick="Page_underdevelop()">Quiz 3</a></li>
               <li><a href="#"onclick="Page_underdevelop()">Quiz 4</a></li>
               <li><a href="#"onclick="Page_underdevelop()">Quiz 5</a></li>
@@ -30,7 +30,8 @@
       <li>
         <a href="#">Quiz Prep.</a>
         <ul class="dropdown">
-            <li><a href="#" onclick="passlevel(1)">Factorizing Quadratic Expressions</a></li>
+            <li><a href="Factorizing_quiz_examples.html">Factorizing Quadratic Expressions</a></li>
+            <li><a href="About_Grading.html">About Grading</a></li>
         </ul>
     </li>
       <li><a href="#" onclick= "About_us()">About Us</a></li>
