--- a/Quadric_Equation_Quiz.html
+++ b/Quadric_Equation_Quiz.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Factorization Quiz</title>
+    <title>Quadratic Equation Quiz</title>
     <link rel="stylesheet" href="css/styles-fact-quiz.css">
 </head>
 <body>
@@ -18,11 +18,14 @@
     </header>
     <div class="container">
 
-        <h1>Factorization Quiz</h1>
+        <h1>Quadratic Equation Quiz</h1>
         <h2>Level : <div id="Level" style="display: inline;"></div></h2>
         <div id="current_marks" class ="right-align"></div>
-        <div class="Qcontainer"><div id="current_question"></div> Factorize : <div id="A" style="display: inline;"></div>x<sup>2</sup> <div id="question"></div></div>
-        <input type="text" id="userAnswer" placeholder="(x+a)(x+b)" pattern="[xX0-9()+-]*">
+        <div class="Qcontainer"><div id="current_question"></div> Solve : <div id="A" style="display: inline;"></div>x<sup>2</sup> <div id="question"></div> = 0</div>
+        <div class="AnswerBox">
+            <input type="text" id="userAnswer" placeholder="answer1" pattern="[0-9()+-]*">
+            <input type="text" id="userAnswer" placeholder="answer2" pattern="[0-9()+-]*">
+        </div>
         <button onclick="checkAnswer()">Check Answer</button>
         <div class="progress-bar-container">
             <div class="progress-bar-1" id="progressBar-1"></div>
