Quadratic eqn quiz -lv 1 is done

--- a/Quadric_Equation_Quiz.html
+++ b/Quadric_Equation_Quiz.html
@@ -23,8 +23,8 @@
         <div id="current_marks" class ="right-align"></div>
         <div class="Qcontainer"><div id="current_question"></div> Solve : <div id="A" style="display: inline;"></div>x<sup>2</sup> <div id="question"></div> = 0</div>
         <div class="AnswerBox">
-            <input type="text" id="userAnswer" placeholder="answer1" pattern="[0-9()+-]*">
-            <input type="text" id="userAnswer" placeholder="answer2" pattern="[0-9()+-]*">
+            <input type="number" id="userAnswer1" placeholder="answer1" >
+            <input type="number" id="userAnswer2" placeholder="answer2" >
         </div>
         <button onclick="checkAnswer()">Check Answer</button>
         <div class="progress-bar-container">
@@ -51,7 +51,7 @@
               </div>
         </div>
     </div>
-    <script src="js/quiz_fact_script.js"></script>
+    <script src="js/quiz_equation_solving.js"></script>
 
 </body>
 
