--- a/Factorizing_quiz.html
+++ b/Factorizing_quiz.html
@@ -48,7 +48,7 @@
               </div>
         </div>
     </div>
-    <script src="js/quiz_fact_script.js"></script>
+    <script src="js/quiz_equation_solving.js"></script>
 
 </body>
 
